# falcon-inotify

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  modinotify.cpp  modinotify.hpp  modinotify_st.cpp  modinotify_st.hpp  modinotify_version.hpp
tests/: test.fal
